@@ -1,3 +1,5 @@
+2016-04-xx 1.2.8 Password-free IP mask added into advanced configuration
+
 2016-04-06 1.2.7 Fix for table switches
                  Fix for overnight records using EPG chart
 
